--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@ Founded to bring military-grade logistics to the defense sector, Military Logist
              <br>        <br> &thinsp;Designed to bridge military expertise with community engagement, Cosmic Industries offers veteran-focused services alongside high-quality civilian support.
    <br>  <br>  &nbsp; 
 As a veteran-centered entity, we actively recruit skilled veterans to lead our service areas, honoring the skills and dedication they bring.  <br>   <br>  &thinsp;We remain committed to our core values of Integrity, Respect, Service Excellence, and Community Focus—upholding military-grade standards in every service we provide.  
-                <br>   <br> &thinsp; <i> Whether you’re a military family, a veteran, or a civilian seeking trusted support, MLS and Cosmic Industries are here to serve your needs with precision and care.
+                <br>   <br> &thinsp; <i> "Whether you’re a military family, a veteran, or a civilian seeking trusted support, MLS and Cosmic Industries are here to serve your needs with precision and care."
     </i>  </p>
         </section>
     </main>
