--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <br>   <br> &nbsp;  We are committed to delivering reliable logistics services tailored to meet the unique demands of military and defense sectors.
               <br>   <br> &thinsp; At Military Logistics Services LLC (MLS), we deliver military-grade logistics and maintenance solutions, tailored for the rigorous demands of defense operations.
               <br>   <br>  &thinsp; With Cosmic Industries as our dedicated civilian and military tech services branch, we extend our mission beyond traditional logistics—offering expertise in automotive technology, HVAC services, cybersecurity, and computer repair.   <br>  <br> &thinsp; Built on a foundation of service excellence, MLS and Cosmic Industries are committed to supporting veterans, active-duty personnel, and civilians with unmatched reliability and a community-first approach. 
-              <br>   <br>  &nbsp; <i> Whether for mission-critical needs or everyday support, we bring military standards to every project, ensuring secure, efficient, and skilled solutions for all. </i>
+              <br>   <br>  &nbsp; <i> "Whether for mission-critical needs or everyday support, we bring military standards to every project, ensuring secure, efficient, and skilled solutions for all."</i>
     </p>
         </section>
 
