--- a/maintenance.html
+++ b/maintenance.html
@@ -15,7 +15,7 @@
     <!-- Responsive Header with Hamburger Menu -->
     <header role="banner">
         <img src="logo2.jpg" alt="Military Logistics Services Logo" class="logo" role="img" aria-label="Company Logo">
-        <h1>Military Logistics Services</h1>
+        <h1><em>Military Logistics Services</em></h1>
 
         <!-- Hamburger Menu for Mobile View -->
         <nav role="navigation" aria-label="Main Navigation" class="nav-menu">
@@ -40,9 +40,11 @@
         </section>
     </main>
 
-    <footer role="contentinfo">
-        <p>&copy; 2024 Military Logistics Services. All Rights Reserved.</p>
-    </footer>
+  <footer role="contentinfo">
+        <p>&copy; 2024 Military Logistics Services. All Rights Reserved∆.
+          <br> <hr>  &nbsp; &nbsp;Military-Grade Maintenance <br>for Every Mission
+              </p>
+  </footer>
 
     <script src="script.js"></script>
 </body>
